correction mobile et couleur

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,8 @@ h2 i {
 
 .souligner {
 		text-decoration: underline;
+		text-decoration-color: #f2c318;
+
 }
 
 .taille {
@@ -171,6 +173,27 @@ h2 i {
 .noir {
 	color: black
 }
+
+.li {
+        list-style-type: none;
+        font-size: 1.5rem;
+        font-weight: bold;
+}       
+
+.li2 {
+	font-size: 1.2rem;
+	font-weight: normal;
+}
+
+.li3 {
+	font-size: 1.1rem;
+	font-weight: normal;
+}
+
+.row {
+	display: flex;
+}
+
 
 
 /* END COLONNE DE DROITE */
